--- a/style.css
+++ b/style.css
@@ -3,3 +3,19 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    letter-spacing: 2px;
+}
+
+.header {
+    height: 95vh;
+    background-image: linear-gradient(
+        to bottom right, 
+        rgba(125, 136, 124, 0.8), 
+        rgba(74, 77, 76, 0.8)), 
+        url('./images/erik-mclean-359yV-5925c-unsplash.jpg');
+    background-size: cover;
+    background-position: top;
+}
+
