--- a/style.css
+++ b/style.css
@@ -19,3 +19,17 @@ body {
     background-position: top;
 }
 
+.header-text {
+    position: absolute; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.main-header-text {
+    display: block;
+}
+
+.sub-header-text {
+    display: block;
+}
