--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    letter-spacing: 2px;
+    letter-spacing: .5em;
     color: rgb(240, 248, 255);
     font-family: 'Ubuntu Mono', monospace;
 }
@@ -26,12 +26,15 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .main-header-text {
     display: block;
+    font-size: 2.5em;
 }
 
 .sub-header-text {
     display: block;
+    font-size: 1.5em
 }
