Add 30px padding to body

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     letter-spacing: .5em;
     color: rgb(240, 248, 255);
     font-family: 'Ubuntu Mono', monospace;
+    padding: 30px;
 }
 
 .header {
