Add animation for when the button is hovered

--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body {
     background-position: top;
 }
 
+.header a {
+    font-weight: bolder;
+}
+
 .header-text {
     position: absolute; 
     top: 40%;
@@ -78,15 +82,27 @@ body {
     }
 }
 
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
 .btn:link, 
 .btn:visited {
     text-transform: uppercase;
     text-decoration: none;
     padding: 15px 40px;
     display: inline-block;
-    transform: translateY(0);
     transition: all .5s;
     border-radius: 100px;
+    position: relative;
 }
 
 .btn-white {
@@ -104,6 +120,32 @@ body {
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6);
 }
 
+.btn::after {
+    content: ""; 
+    display: inline-block;
+    height: 100%; 
+    width: 100%;
+    border-radius: 100px; 
+    position: absolute; 
+    top: 0; 
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+ 
+}
 
+.btn-white::after {
+    background-color: #ffffff;
+}
+
+.btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
+.btn-animated {
+    animation: moveInBottom .5s ease-out .75s; 
+    animation-fill-mode: backwards;
+}
 
 
