--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,20 +32,20 @@ body {
         url('../images/erik-mclean-359yV-5925c-unsplash.jpg');
     background-size: cover;
     background-position: top;
+
+    &__text {
+        position: absolute; 
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        backface-visibility: hidden;
+    }
 }
 
 .header a {
     font-size: x-large;
     font-weight: bolder;
-}
-
-.header__text {
-    position: absolute; 
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    backface-visibility: hidden;
 }
 
 .heading-main-text {
