--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,14 @@
+@import "./abstracts/functions";
+@import "./abstracts/mixins";
+@import "./abstracts/variables";
+
+@import "./base/animations";
+@import "./base/base";
+@import "./base/typography";
+@import "./base/utilities";
+
+@import "./pages/home.scss";
+
 $color-primary: #000000;
 $color-secondary: #52057b; 
 $color-tertiary: #892cdc; 
