--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,50 @@ body {
   padding: 3rem;
   box-sizing: border-box; }
 
+.btn:link, .btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  transition: all .5s;
+  border-radius: 10rem;
+  position: relative; }
+
+.btn--white {
+  background-color: #ffffff;
+  color: #777777; }
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.6); }
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.6); }
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 10rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s; }
+
+.btn--white::after {
+  background-color: #ffffff; }
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0; }
+
+.btn--animated {
+  animation: moveInBottom .5s ease-out .75s;
+  animation-fill-mode: backwards; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(64, 64, 64, 0.8)), url("../images/erik-mclean-359yV-5925c-unsplash.jpg");
