--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,10 @@
+body {
+    letter-spacing: 1rem;
+    color: rgb(240, 248, 255);
+    font-family: 'Ubuntu Mono', monospace;
+    padding: 3rem;
+}
+
 .heading-main-text {
     display: block;
     font-size: 5rem;
