--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,4 +1,12 @@
+// Colors
+
 $color-primary: #000000;
 $color-secondary: #52057b; 
 $color-tertiary: #892cdc; 
 $color-quartary: #bc6ff1;
+
+// Grid 
+
+$grid-width: 114rem; 
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
