--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,31 @@
+@keyframes moveInFromLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px); }
+  50% {
+    transform: translatex(110px); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
+@keyframes moveInFromRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px); }
+  50% {
+    transform: translatex(-50px); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
 *,
 *::before,
 *::after {
@@ -9,11 +37,24 @@ html {
   font-size: 62.5%; }
 
 body {
-  letter-spacing: 1rem;
+  box-sizing: border-box; }
+
+body {
   color: aliceblue;
   font-family: 'Ubuntu Mono', monospace;
-  padding: 3rem;
-  box-sizing: border-box; }
+  padding: 3rem; }
+
+.heading-main-text {
+  display: block;
+  font-size: 10rem;
+  animation: moveInFromLeft 1s ease-out;
+  margin-bottom: 1rem; }
+
+.heading-sub-text {
+  display: block;
+  font-size: 3rem;
+  animation: moveInFromRight 1s ease-out;
+  margin-bottom: 3rem; }
 
 .btn:link, .btn:visited {
   text-transform: uppercase;
@@ -75,42 +116,33 @@ body {
     font-size: x-large;
     font-weight: bolder; }
 
-.heading-main-text {
-  display: block;
-  font-size: 5rem;
-  animation: moveInFromLeft 1s ease-out;
-  margin-bottom: 1rem; }
-
-.heading-sub-text {
-  display: block;
-  font-size: 3rem;
-  animation: moveInFromRight 1s ease-out;
-  margin-bottom: 3rem; }
-
-@keyframes moveInFromLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-100px); }
-  50% {
-    transform: translatex(110px); }
-  100% {
-    opacity: 1;
-    transform: translate(0); } }
-
-@keyframes moveInFromRight {
-  0% {
-    opacity: 0;
-    transform: translateX(100px); }
-  50% {
-    transform: translatex(-50px); }
-  100% {
-    opacity: 1;
-    transform: translate(0); } }
-
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(30px); }
-  100% {
-    opacity: 1;
-    transform: translate(0); } }
+.row {
+  max-width: 114rem;
+  background-color: #eee;
+  margin: 0 auto;
+  color: black; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^="col-"] {
+    background-color: orangered;
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * 6rem) / 3); }
+  .row .col-2-of-3 {
+    width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3 * 6rem) / 4); }
+  .row .col-2-of-4 {
+    width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem); }
+  .row .col-3-of-4 {
+    width: calc((2 * ((100% - 3 * 6rem) / 4) + 6rem) + ((100% - 3 * 6rem) / 4) + 6rem); }
+  .row .col-2-of-3 {
+    width: calc(100% - 6rem / 66.6%); }
