--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,6 +5,8 @@ $color-secondary: #52057b;
 $color-tertiary: #892cdc; 
 $color-quartary: #bc6ff1;
 
+$color-grey-light-1: #f7f7f7;
+
 // Grid 
 
 $grid-width: 114rem; 
