--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,19 +2,39 @@ body {
     // letter-spacing: 1rem;
     color: rgb(240, 248, 255);
     font-family: 'Ubuntu Mono', monospace;
-    padding: 3rem;
+    //padding: 3rem;
 }
 
-.heading-main-text {
-    display: block;
-    font-size: 10rem;
-    animation: moveInFromLeft 1s ease-out;
-    margin-bottom: 1rem;
+.heading-primary {
+    &--main {
+        display: block;
+        font-size: 6rem;
+        animation: moveInFromLeft 1s ease-out;
+        margin-bottom: 1rem;
+    }
+    
+    &--sub {
+        display: block;
+        font-size: 3rem;
+        animation: moveInFromRight 1s ease-out;
+        margin-bottom: 3rem;
+    }
 }
 
-.heading-sub-text {
-    display: block;
-    font-size: 3rem;
-    animation: moveInFromRight 1s ease-out;
-    margin-bottom: 3rem;
+.heading-secondary {
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    background-image: linear-gradient(to right, $color-quartary, $color-tertiary);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    letter-spacing: .2rem;
+    transition: all .2s;
+
+    &:hover {
+        transform: skewY(2deg) skewX(15deg) scale(1.1);
+        text-shadow: .5rem 1rem 2rem rgba(rgb(0, 0, 0), .2);
+    }
 }
