--- a/css/style.css
+++ b/css/style.css
@@ -41,20 +41,40 @@ body {
 
 body {
   color: aliceblue;
-  font-family: 'Ubuntu Mono', monospace;
-  padding: 3rem; }
+  font-family: 'Ubuntu Mono', monospace; }
 
-.heading-main-text {
+.heading-primary--main {
   display: block;
-  font-size: 10rem;
+  font-size: 6rem;
   animation: moveInFromLeft 1s ease-out;
   margin-bottom: 1rem; }
 
-.heading-sub-text {
+.heading-primary--sub {
   display: block;
   font-size: 3rem;
   animation: moveInFromRight 1s ease-out;
   margin-bottom: 3rem; }
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #bc6ff1, #892cdc);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: all .2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-8 {
+  margin-bottom: 8rem; }
 
 .btn:link, .btn:visited {
   text-transform: uppercase;
@@ -104,7 +124,8 @@ body {
   height: 95vh;
   background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(64, 64, 64, 0.8)), url("../images/erik-mclean-359yV-5925c-unsplash.jpg");
   background-size: cover;
-  background-position: top; }
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0% 100%); }
   .header__text {
     position: absolute;
     top: 40%;
@@ -116,9 +137,13 @@ body {
     font-size: x-large;
     font-weight: bolder; }
 
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
+
 .row {
   max-width: 114rem;
-  background-color: #eee;
   margin: 0 auto;
   color: black; }
   .row:not(:last-child) {
@@ -128,7 +153,6 @@ body {
     display: table;
     clear: both; }
   .row [class^="col-"] {
-    background-color: orangered;
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
