Add variables for default font size and variables for black and white colors

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,7 +5,12 @@ $color-secondary: #52057b;
 $color-tertiary: #892cdc; 
 $color-quartary: #bc6ff1;
 
-$color-grey-light-1: #f7f7f7;
+$color-black: #000000; 
+$color-white: #ffffff;
+$color-grey-light-1: #f7f7f7; 
+
+// Font 
+$default-font-size: 1.6rem;
 
 // Grid 
 
