--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -38,3 +38,16 @@ body {
         text-shadow: .5rem 1rem 2rem rgba(rgb(0, 0, 0), .2);
     }
 }
+
+.heading-tertiary {
+    font-size: $default-font-size;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+p {
+    font-size: $default-font-size;
+    &:not(:last-child) {
+        margin-bottom: 3rem;
+    }
+}
