Add margin utilities

--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,3 +1,5 @@
 .u-center-text { text-align: center; }
 
-.u-margin-bottom-8 { margin-bottom: 8rem; }
+.u-margin-bottom-lg { margin-bottom: 8rem; }
+.u-margin-bottom-med { margin-bottom: 4rem; }
+.u-margin-bottom-sm { margin-bottom: 1.5rem; }
