Add padding to body

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,7 +2,7 @@ body {
     // letter-spacing: 1rem;
     color: rgb(240, 248, 255);
     font-family: 'Ubuntu Mono', monospace;
-    //padding: 3rem;
+    padding: 3rem;
 }
 
 .heading-primary {
