--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,9 +9,10 @@
 
 @import "./components/button";
 @import "./components/composition";
+@import "./components/feature-box";
 
-@import "./layout/header.scss";
+@import "./layout/header";
 
-@import "./pages/home.scss";
+@import "./pages/home";
 
 @import "./layout/grid";
