Add variable for default icon font size

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,10 +7,13 @@ $color-quartary: #bc6ff1;
 
 $color-black: #000000; 
 $color-white: #ffffff;
-$color-grey-light-1: #f7f7f7; 
+$color-grey-light: #f7f7f7; 
 
 // Font 
 $default-font-size: 1.6rem;
+
+// Icon 
+$icon-default-font-size: 5rem;
 
 // Grid 
 
