Add utility class with negative margins

--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -3,3 +3,5 @@
 .u-margin-bottom-lg { margin-bottom: 8rem; }
 .u-margin-bottom-med { margin-bottom: 4rem; }
 .u-margin-bottom-sm { margin-bottom: 1.5rem; }
+
+.u-negative-margin-md { margin-top: -5rem}
