--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,9 @@ p {
 .u-margin-bottom-sm {
   margin-bottom: 1.5rem; }
 
+.u-negative-margin-md {
+  margin-top: -5rem; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -182,9 +185,22 @@ p {
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
 
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 2.5rem;
+  border-radius: .3rem;
+  box-shadow: 0 1.5rem rgba(0, 0, 0, 0.15);
+  transition: transform .3s ease-in; }
+  .feature-box__icon {
+    font-size: 5rem;
+    margin-bottom: .5rem; }
+  .feature-box:hover {
+    transform: translateY(-3rem) scale(1.03); }
+
 .header {
   height: 95vh;
-  background-image: linear-gradient(to bottom right, rgba(82, 5, 123, 0.8), rgba(198, 153, 238, 0.8)), url("../images/arc-1.jpg");
+  background-image: linear-gradient(to bottom right, rgba(82, 5, 123, 0.8), rgba(198, 153, 238, 0.8)), url("../../images/arc-1.jpg");
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0% 100%); }
@@ -203,6 +219,16 @@ p {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh; }
+
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(to bottom right, rgba(82, 5, 123, 0.8), rgba(198, 153, 238, 0.8)), url("../../images/arc-6.jpg");
+  background-size: cover;
+  background-position: center;
+  transform: skewY(-7deg);
+  margin-top: -11rem; }
+  .section-features > * {
+    transform: skewY(7deg); }
 
 .row {
   max-width: 114rem;
