--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -21,3 +21,9 @@
         transform: skewY(7deg);
     }
 }
+
+.section-arcades {
+    background-color: $color-grey-light; 
+    padding: 25rem 0 50rem 0;
+    margin-top: -10vh;
+}
