Add variable for dark grey color

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,6 +8,7 @@ $color-quartary: #bc6ff1;
 $color-black: #000000; 
 $color-white: #ffffff;
 $color-grey-light: #f7f7f7; 
+$color-grey-dark: #eee;
 
 // Font 
 $default-font-size: 1.6rem;
