Update path to image

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -10,7 +10,7 @@
         to bottom right, 
         rgba($color-secondary, 0.8), 
         rgba(lighten($color-tertiary, 25%), 0.8)), 
-        url('../../images/arc-6.jpg');
+        url(../images/arc-6.jpg);
     background-size: cover;
     background-position: center;
 
