Add style for a purple button with large font size

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -15,6 +15,15 @@
         color: #777777;
     }
 
+    &--purple {
+        background-color: $color-secondary;
+        color: $color-white;
+    }
+
+    &--lg {
+        font-size: 3rem;
+    }
+
     &:hover {
         transform: translateY(-3px);
         box-shadow: 0 1rem 2rem rgba($color-black, 0.6);
@@ -41,6 +50,10 @@
 
     &--white::after {
         background-color: #ffffff;
+    }
+
+    &--purple::after {
+        background-color: $color-secondary;
     }
 
     &:hover::after {
