--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,9 +1,11 @@
 // Colors
 
-$color-primary: #000000;
-$color-secondary: #52057b; 
-$color-tertiary: #892cdc; 
-$color-quartary: #bc6ff1;
+$color-primary-light: #9ad3bc;
+$color-primary-dark: #0ba366;
+$color-secondary-light: #f3eac2; 
+$color-secondary-dark: #f5d755; 
+$color-tertiary: #f5b461; 
+$color-quartary: #ec524b;
 
 $color-black: #000000; 
 $color-white: #ffffff;
