--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -26,7 +26,7 @@ body {
     text-transform: uppercase;
     font-weight: 700;
     display: inline-block;
-    background-image: linear-gradient(to right, $color-quartary, $color-tertiary);
+    background-image: linear-gradient(to right, $color-primary-dark, $color-primary-light);
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
