--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -25,7 +25,7 @@
         }
 
         &:hover {
-            outline: 1.5rem solid $color-secondary;
+            outline: 1.5rem solid $color-primary-dark;
             transform: scale(1.05) translateY(-.5rem);
             box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
             z-index: 2;
