--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -8,7 +8,7 @@
     padding: 20rem 0;
     background-image: linear-gradient(
         to bottom right, 
-        rgba($color-secondary, 0.8), 
+        rgba($color-secondary-light, 0.8), 
         rgba(lighten($color-tertiary, 25%), 0.8)), 
         url(../images/arc-6.jpg);
     background-size: cover;
