--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -15,8 +15,8 @@
         color: #777777;
     }
 
-    &--purple {
-        background-color: $color-secondary;
+    &--green {
+        background-color: $color-primary-dark;
         color: $color-white;
     }
 
@@ -52,8 +52,8 @@
         background-color: #ffffff;
     }
 
-    &--purple::after {
-        background-color: $color-secondary;
+    &--green::after {
+        background-color: $color-primary-dark;
     }
 
     &:hover::after {
@@ -73,14 +73,14 @@
         display: inline-block;
         font-size: $default-font-size;
         text-decoration: none;
-        border-bottom: .1rem solid $color-secondary;
+        border-bottom: .1rem solid $color-secondary-light;
         transition: all .2s;
-        color: $color-secondary;
+        color: $color-secondary-light;
         padding: .3rem;
     }
     
     &:hover {
-        background-color: $color-secondary;
+        background-color: $color-secondary-light;
         color: #ffffff;
         transform: translateY(-10%);
         box-shadow: 0 1rem 2rem rgba($color-black, .15);
