--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "./components/button";
 @import "./components/composition";
 @import "./components/feature-box";
+@import "./components/story.scss";
 
 @import "./layout/header";
 
