--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -23,3 +23,7 @@ $icon-default-font-size: 5rem;
 $grid-width: 114rem; 
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+// Margins 
+
+$margin-top-lg: 8rem;
