--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -62,7 +62,7 @@
     }
 
     &--animated {
-        animation: moveInBottom .5s ease-out .75s; 
+        animation: moveInBottom 1s ease-out .75s; 
         animation-fill-mode: backwards;
     }
 }
