--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -75,13 +75,13 @@
         text-decoration: none;
         border-bottom: .1rem solid $color-secondary-light;
         transition: all .2s;
-        color: $color-secondary-light;
+        color: $color-primary-dark;
         padding: .3rem;
     }
     
     &:hover {
-        background-color: $color-secondary-light;
-        color: #ffffff;
+        background-color: $color-primary-light;
+        color: $color-white;
         transform: translateY(-10%);
         box-shadow: 0 1rem 2rem rgba($color-black, .15);
     }
