--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,6 @@
 .section-about {
     background-color: $color-grey-light; 
-    padding: 25rem 0;
+    padding: 35rem 0;
     margin-top: -20vh;
 }
 
@@ -24,8 +24,9 @@
 
 .section-arcades {
     background-color: $color-grey-light; 
-    padding: 25rem 0 15rem 0;
-    margin-top: -10vh;
+    padding-top: 50rem;
+    padding-bottom: 1rem;
+    margin-top: -23vh;
 }
 
 .section-stories {
