Import video component

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,8 +7,9 @@
 @import "./base/typography";
 @import "./base/utilities";
 
-@import "./components/card";
+@import "./components/bg-video";
 @import "./components/button";
+@import "./components/card";
 @import "./components/composition";
 @import "./components/feature-box";
 @import "./components/story.scss";
