Add overflow hidden to section-stories to fix the overflow issue with the video

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -31,5 +31,6 @@
 
 .section-stories {
     padding: 15rem 0;
-    background-color: $color-grey-light;
+    position: relative;
+    overflow: hidden;
 }
