--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,8 @@
 @import "./components/card";
 @import "./components/composition";
 @import "./components/feature-box";
-@import "./components/story.scss";
+@import "./components/form";
+@import "./components/story";
 
 @import "./layout/header";
 
