Add variable for a lighter grey

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -10,7 +10,8 @@ $color-quartary: #ec524b;
 $color-black: #000000; 
 $color-white: #ffffff;
 $color-grey-light: #f7f7f7; 
-$color-grey-dark: #eee;
+$color-grey-dark: #777;
+$color-grey-dark-2: #999;
 
 // Font 
 $default-font-size: 1.6rem;
@@ -27,3 +28,7 @@ $gutter-horizontal: 6rem;
 // Margins 
 
 $margin-top-lg: 8rem;
+
+// Borders 
+
+$border-radius-small: 3px;
