--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link, 
     &:visited {
         text-transform: uppercase;
@@ -8,6 +9,8 @@
         transition: all .5s;
         border-radius: 10rem;
         position: relative;
+        border: none;
+        cursor: pointer;
     }
 
     &--white {
@@ -29,7 +32,9 @@
         box-shadow: 0 1rem 2rem rgba($color-black, 0.6);
     }
 
+    &:focus,
     &:active {
+        outline: none;
         transform: translateY(-1px);
         box-shadow: 0 .5rem 1rem rgba($color-black, 0.6);
     }
