Add variable for dark grey color

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,6 +12,7 @@ $color-white: #ffffff;
 $color-grey-light: #f7f7f7; 
 $color-grey-dark: #777;
 $color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
 
 // Font 
 $default-font-size: 1.6rem;
