Add variable for md button

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -23,6 +23,11 @@
         color: $color-white;
     }
 
+    &--md {
+        font-size: 2rem;
+    }
+
+
     &--lg {
         font-size: 3rem;
     }
