--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -24,6 +24,7 @@ $icon-default-font-size: 5rem;
 
 $grid-width: 114rem; 
 $gutter-vertical: 8rem;
+$gutter-vertical-sm: 6rem;
 $gutter-horizontal: 6rem;
 
 // Margins 
