Add breakpoint for tablet and phone

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,7 +2,7 @@ body {
     // letter-spacing: 1rem;
     color: rgb(240, 248, 255);
     font-family: 'Ubuntu Mono', monospace;
-    padding: 3rem;
+  
 }
 
 .heading-primary {
@@ -32,6 +32,11 @@ body {
     color: transparent;
     letter-spacing: .2rem;
     transition: all .2s;
+
+
+    @include respond(phone) {
+        font-size: 3rem;
+    }
 
     &:hover {
         transform: skewY(2deg) skewX(15deg) scale(1.1);
