--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -6,9 +6,17 @@
     box-shadow: 0 1.5rem rgba($color-black, .15);
     transition: transform .3s ease-in;
 
+    @include respond(tab-port) {
+        padding: 2rem;
+    }
+
     &__icon {
         font-size: $icon-default-font-size;
         margin-bottom: .5rem;
+
+        @include respond(tab-port) {
+            margin-bottom: 0;
+        }
     }
 
     &:hover {
